2009-11-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* custom.el (custom-declare-group): Purecopy load-file-name.

	* subr.el (menu-bar-separator): New defconst.
	* net/eudc.el (eudc-tools-menu):
	* international/mule-cmds.el (set-coding-system-map)
	(mule-menu-keymap):
	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-map):
	* vc-hooks.el (vc-menu-map):
	* replace.el (occur-mode-map):
	* menu-bar.el (menu-bar-file-menu, menu-bar-search-menu)
	(menu-bar-edit-menu, menu-bar-goto-menu, menu-bar-edit-menu)
	(menu-bar-custom-menu, menu-bar-showhide-menu)
	(menu-bar-options-menu, menu-bar-tools-menu)
	(menu-bar-encryption-decryption-menu, menu-bar-describe-menu)
	(menu-bar-search-documentation-menu, menu-bar-manuals-menu)
	(menu-bar-help-menu):
	* ediff-hook.el (menu-bar-ediff-menu, menu-bar-ediff-merge-menu):
	* buff-menu.el (Buffer-menu-mode-map): Use menu-bar-separator.

	* term/x-win.el (x-gtk-stock-map):
	* progmodes/vera-mode.el (auto-mode-alist):
	* progmodes/inf-lisp.el (inferior-lisp-filter-regexp)
	(inferior-lisp-program, inferior-lisp-load-command):
	* progmodes/hideshow.el (hs-special-modes-alist):
	* progmodes/gud.el (same-window-regexps):
	* progmodes/grep.el (grep-program, find-program, xargs-program):
	* net/telnet.el (same-window-regexps):
	* net/rlogin.el (same-window-regexps):
	* language/ethiopic.el (font-ccl-encoder-alist):
	* vc-sccs.el (vc-sccs-master-templates):
	* vc-rcs.el (vc-rcs-master-templates):
	* subr.el (cl-assertion-failed):
	* simple.el (next-error-overlay-arrow-position):
	* lpr.el (lpr-command):
	* locate.el (locate-ls-subdir-switches):
	* info.el (same-window-regexps, info)
	(Info-goto-emacs-command-node, Info-goto-emacs-key-command-node):
	* image-mode.el (image-mode, auto-mode-alist):
	* hippie-exp.el (hippie-expand-ignore-buffers):
	* format.el (format-alist):
	* find-dired.el (find-ls-subdir-switches, find-grep-options)
	(find-name-arg):
	* facemenu.el (facemenu-keybindings):
	* dired.el (dired-listing-switches, dired-chown-program):